--- a/index.html
+++ b/index.html
@@ -1,13 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <meta name="description" content="Agepi-Techは最新の技術情報を提供するテックブログです。プログラミング、AI、Web開発など幅広いトピックをカバーします。">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Agepi-Tech | 最新のテクノロジー情報">
+    <meta property="og:description" content="プログラミング、AI、Web開発など最新の技術情報を提供するブログです。">
+    <meta property="og:image" content="https://example.com/img/og-image.png">
+    <meta property="og:url" content="https://example.com">
+    <meta property="og:type" content="website">
+    <title>Agepi-Tech - ホーム</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            color: #36342c;
+            background-color: #f2f2f2;
+        }
+        header {
+            background-color: #36342c;
+            color: #f2f2f2;
+            padding: 20px;
+            display: flex;
+            align-items: center; /* 垂直方向に中央揃え */
+            justify-content: center; /* 水平方向に中央揃え */
+            position: relative; /* h1を中央に配置するためにrelativeを使います */
+        }
+
+        header img {
+            margin-right: auto; /* 画像を左端に固定 */
+        }
+
+        header h1 {
+            position: absolute; /* h1を中央に配置 */
+            left: 50%; /* 水平中央に配置 */
+            transform: translateX(-50%); /* 正確に中央に配置するためにtransformを使用 */
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #f2f2f2;
+            padding: 10px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #36342c;
+        }
+        main {
+            padding: 20px;
+            max-width: 1200px;
+            margin: auto;
+        }
+        .catchImage {
+            padding: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+        .hero {
+            background-color: #fac42f;
+            padding: 20px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .game-list, .errata-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+        .game-item, .errata-item {
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 10px;
+            width: 300px;
+            text-align: center;
+            background-color: #f2f2f2;
+        }
+        footer {
+            background-color: #36342c;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 10px;
+            margin-top: 20px;
+        }
+        .social-links a {
+            margin: 0 10px;
+            color: #fac42f;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>This is a simple HTML page hosted on GitHub Pages.</p>
+    <header>
+        <img src="img/agepi-tech-logo.png" height="128px">
+        <h1>Agepi-Tech</h1>
+    </header>
+
+    <nav>
+        <a href="#">ホーム</a>
+        <a href="#">ゲーム紹介</a>
+        <a href="#">エラッタ情報</a>
+        <a href="#">サークル紹介</a>
+        <a href="#">ギャラリー</a>
+    </nav>
+
+    <main>
+        <section class="catchImage">
+            <img src="img/catch.png" width="90%">
+        </section>
+
+        <section class="hero">
+            <h2>新作カードゲームのお知らせ</h2>
+            <p>現在開発中の最新作の情報をお届けします！</p>
+        </section>
+
+        <h2>ゲーム紹介</h2>
+        <section class="game-list">
+            <div class="game-item">
+                <h3>プログラム言語神経衰弱</h3>
+                <p>説明とか画像とかもろもろ文字文字。</p>
+            </div>
+            <div class="game-item">
+                <h3>Linuxコマンドかるた</h3>
+                <p>説明とか画像とかもろもろ文字文字。</p>
+            </div>
+            <div class="game-item">
+                <h3>SQLビルダー</h3>
+                <p>説明とか画像とかもろもろ文字文字。</p>
+            </div>
+            <div class="game-item">
+                <h3>HTTPステータス言語百人一首</h3>
+                <p>説明とか画像とかもろもろ文字文字。</p>
+            </div>
+            <div class="game-item">
+                <h3>ときならべ</h3>
+                <p>説明とか画像とかもろもろ文字文字。</p>
+            </div>
+            <!-- 追加のゲームアイテムもここに -->
+        </section>
+
+        <h2>エラッタ情報</h2>
+        <section class="errata-list">
+            <div class="errata-item">
+                <h3>ゲームタイトル1</h3>
+                <p>エラッタ情報の詳細がここに入ります。</p>
+            </div>
+            <div class="errata-item">
+                <h3>ゲームタイトル2</h3>
+                <p>エラッタ情報の詳細がここに入ります。</p>
+            </div>
+            <!-- 追加のエラッタアイテムもここに -->
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2024 アゲピテック. All rights reserved.</p>
+        <div class="social-links">
+            <a href="https://x.com/agepeanuts">X</a> |
+            <a href="https://note.com/nspalette/m/m64875b753d55">note</a> |
+            <a href="https://agepeanuts.booth.pm/">BOOTH</a>
+        </div>
+    </footer>
 </body>
 </html>
