--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </head>
 <body>
     <header>
-        <img src="img/agepi-tech-logo.png" height="128px">
+        <img src="agepi-tech-logo.png" height="128px">
         <h1>Agepi-Tech</h1>
     </header>
 
@@ -112,7 +112,7 @@
 
     <main>
         <section class="catchImage">
-            <img src="img/catch.png" width="90%">
+            <img src="catch.png" width="90%">
         </section>
 
         <section class="hero">
