--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <nav>
         <a href="#">ホーム</a>
         <a href="#">ゲーム紹介</a>
-        <a href="#">エラッタ情報</a>
+        <a href="errata">エラッタ情報</a>
         <a href="#">サークル紹介</a>
         <a href="#">ギャラリー</a>
     </nav>
